--- a/Automator-ExecutorGUI/pom.xml
+++ b/Automator-ExecutorGUI/pom.xml
@@ -10,6 +10,24 @@
 	<packaging>jar</packaging>
 	<name>Automator-ExecutorGUI</name>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>tool.automator.executor.gui.main.GUITestScriptExecutorMain</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.thoughtworks</groupId>
