--- a/Automator-DatabaseAccess/pom.xml
+++ b/Automator-DatabaseAccess/pom.xml
@@ -57,11 +57,11 @@
 			<version>5.1.18</version>
 		</dependency>
 
-		<!-- PostgreSQL -->
+		<!-- H2 DB -->
 		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.167</version>
 		</dependency>
 
 		<!-- EhCache -->
@@ -76,23 +76,6 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.0.3.RELEASE</version>
-		</dependency>
-
-		<!-- Spring Mongo -->
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>2.7.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-mongodb</artifactId>
-			<version>1.1.0.BUILD-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib-nodep</artifactId>
-			<version>2.2</version>
 		</dependency>
 
 		<!-- Gson: Java to Json conversion -->
