--- a/Automator-DatabaseAdmin/pom.xml
+++ b/Automator-DatabaseAdmin/pom.xml
@@ -56,6 +56,18 @@
 			<version>1</version>
 		</dependency>
 
+		<!-- Spring MVC -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
 		<!-- Axis -->
 		<dependency>
 			<groupId>axis</groupId>
