--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,5 @@ Thumbs.db
 .project
 .settings/
 target/
-DatabaseSettings/
-GeneratedTestscripts/
+DatabaseSettings/*.xml
+GeneratedTestscripts/*.ts
